samples/_failures_safe/1761529028_f990ed_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_270771c6.c: In function ‘main’:
./samples/SAFE/__tmp_270771c6.c:151:12: error: missing terminating " character
  151 |     printf("\nFilter by level (0=INFO, 1=WARNING, 2=ERROR, 3=DEBUG, 4=UNKNOWN, -1
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_270771c6.c:151:5: error: expected expression at end of input
  151 |     printf("\nFilter by level (0=INFO, 1=WARNING, 2=ERROR, 3=DEBUG, 4=UNKNOWN, -1
      |     ^~~~~~
./samples/SAFE/__tmp_270771c6.c:151:5: error: expected declaration or statement at end of input
